--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
         "@ionic/storage": "2.0.1",
+        "axios": "^0.16.2",
         "chart.js": "^2.6.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
@@ -51,6 +52,7 @@
         "@ionic/app-scripts": "1.3.7",
         "@ionic/cli-plugin-cordova": "1.4.1",
         "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "ionic": "3.12.0",
         "typescript": "2.3.3"
     },
     "description": "An Ionic project",
